# ada-payment-service

./: Dockerfile  Makefile  pyproject.toml
finance_service/: main.py  schemas.py
finance_service/migrations/: alembic.ini  env.py
finance_service/migrations/versions/: d3d4af44c161_initializing_the_migration_model.py
finance_service/models/: item_return.py  user.py
payment_service/: crud.py  main.py  pubsub.py  schemas.py
payment_service/migrations/: alembic.ini  env.py
payment_service/migrations/versions/: 11163521cdbf_add_amount_to_the_payment_table.py  d5fa5536b818_turn_user_id_into_string.py  d9e74ff593f9_change_to_payment_service.py  e2ee32b6b165_generate_model.py
payment_service/models/: payment.py  user.py
